--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
     "jest": "^26.6.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-autosuggest": "^10.0.3",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-router": "^5.2.0",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
   },
