--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.1",
     "react-autosuggest": "^10.0.3",
     "react-bootstrap": "^1.4.0",
+    "react-bootstrap-typeahead": "^5.1.2",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
